# ur5_ros_klampt

./: CMakeLists.txt  README.md  package.xml  pyproject.toml
model/: ur5.urdf  world.xml
scripts/: action_client.py  plan_and_move.py
