<?xml version="1.0"?>
<package format="2">
  <name>ur5_ros_klampt</name>
  <version>0.1.0</version>
  <description>ros klampt planner for ur5</description>
  <maintainer email="neka-nat@todo.todo">neka-nat</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>

  <export>
  </export>
</package>